# bigquery_partition_access_auditor

./: .coverage  .gitignore  README.md  bq_partition_audit.py  extreme_tpcds_test.py  pyproject.toml
examples/: run_user_query_scenario.py  verify_expansion_logic.py
tests/: demo_audit_run.py  generate_tpcds_traffic.py  test_auditor_logic.py  test_cli.py  test_dimension_expansion.py  test_infrastructure.py  test_orchestration.py
